--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = django-moodle_webservice
+name = django-moodlewebservice
 version = 1.0
 description = A Django reusable app for Moodle Webservice functions
 long_description = file: README.md
